spade-tests/src/snapshots/spade_tests__hir_lowering__tests__let_binding_inout_produes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern entity consumer(#[no_mangle] t: inout<bool>);
entity test(#[no_mangle] t: inout<bool>) {
    let t_ = t;
    inst consumer(t_)
}

error: Values of inout type cannot be bound to names
  ┌─ testinput:3:9
  │
3 │     let t_ = t;
  │         ^^ inout type bound to name
  │
  = help: inout values can only be passed along to other modules
